Add table counts

--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -439,7 +439,7 @@
                         {{if gt (len .DLCs) 0}}
 
                             <div class="table-responsive">
-                                <table class="table table-hover table-striped table-datatable mb-0" data-order='[[ 1, "desc" ]]'>
+                                <table class="table table-hover table-striped table-counts table-datatable mb-0" data-order='[[ 1, "desc" ]]'>
                                     <thead class="thead-light">
                                     <tr>
                                         <th scope="col">Name</th>
