--- a/cmd/webserver/templates/product_keys.gohtml
+++ b/cmd/webserver/templates/product_keys.gohtml
@@ -21,13 +21,13 @@
                             <div class="col-sm-10">
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input class="form-check-input" type="radio" name="type" value="app" {{ if eq .Type "app" }}checked{{ end }}>
+                                        <input class="form-check-input" type="radio" name="type" value="apps" {{ if eq .Type "apps" }}checked{{ end }}>
                                         App
                                     </label>
                                 </div>
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input class="form-check-input" type="radio" name="type" value="package" {{ if eq .Type "package" }}checked{{ end }}>
+                                        <input class="form-check-input" type="radio" name="type" value="packages" {{ if eq .Type "packages" }}checked{{ end }}>
                                         Package
                                     </label>
                                 </div>
