--- a/cmd/webserver/templates/chat_bot.gohtml
+++ b/cmd/webserver/templates/chat_bot.gohtml
@@ -36,7 +36,7 @@
                                 <th scope="col">Description</th>
                             </tr>
                             </thead>
-                            <tbody class="tags-list">
+                            <tbody>
                             {{ range $value }}
                                 <tr>
                                     <td class="nowrap" style="width: 25%;">{{ .Example }}</td>
