--- a/cmd/webserver/templates/commits.gohtml
+++ b/cmd/webserver/templates/commits.gohtml
@@ -23,7 +23,7 @@
                             <th scope="col">Live</th>
                         </tr>
                         </thead>
-                        <tbody class="tags-list">
+                        <tbody>
                         </tbody>
                     </table>
                 </div>
