--- a/cmd/webserver/templates/genres.gohtml
+++ b/cmd/webserver/templates/genres.gohtml
@@ -37,7 +37,7 @@
                             <th scope="col">Avg Score</th>
                         </tr>
                         </thead>
-                        <tbody class="tags-list">
+                        <tbody>
                         {{ range $key, $value := .Genres }}
                             <tr data-link="{{.GetPath}}">
                                 <td><i class="fas fa-film"></i> {{ .Name }}</td>
