--- a/cmd/webserver/templates/apps.gohtml
+++ b/cmd/webserver/templates/apps.gohtml
@@ -46,7 +46,7 @@
                         <select multiple data-placeholder="Hidden" class="form-control form-control-chosen" id="hidden" name="hidden">
                         </select>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3x">
+                    <div class="col-sm-6 col-md-4">
                         <div class="form-group">
                             <label for="tags">Tag
                                 <small>(<a href="/tags" class="stop-prop">Tags</a>)</small>
@@ -58,7 +58,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3x">
+                    <div class="col-sm-6 col-md-4">
                         <div class="form-group">
                             <label for="genres">Genre
                                 <small>(<a href="/genres" class="stop-prop">Genres</a>)</small>
@@ -70,7 +70,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3x">
+                    <div class="col-sm-6 col-md-4">
                         <div class="form-group">
                             <label for="categories">Categories
                                 <small>(<a href="/categories" class="stop-prop">Categories</a>)</small>
@@ -82,7 +82,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3x">
+                    <div class="col-sm-6 col-md-4">
                         <div class="form-group">
                             <label for="types">Type</label>
                             <select multiple data-placeholder="Choose Types" class="form-control form-control-chosen" id="types" name="types">
@@ -92,7 +92,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3x">
+                    <div class="col-sm-6 col-md-4">
                         <div class="form-group">
                             <label for="developers">Developer
                                 <small>(<a href="/developers" class="stop-prop">Developers</a>)</small>
@@ -104,7 +104,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3x">
+                    <div class="col-sm-6 col-md-4">
                         <div class="form-group">
                             <label for="publishers">Publisher
                                 <small>(<a href="/publishers" class="stop-prop">Publishers</a>)</small>
@@ -116,7 +116,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3x">
+                    <div class="col-sm-6 col-md-4">
                         <div class="form-group">
                             <label for="platforms">Operating System</label>
                             <select multiple data-placeholder="Choose an OS" class="form-control form-control-chosen" id="platforms" name="platforms">
@@ -127,13 +127,13 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3x">
+                    <div class="col-sm-6 col-md-4">
                         <div class="form-group slider">
                             <label id="price-label">Price</label>
                             <div id="price-slider" data-name="price"></div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3x">
+                    <div class="col-sm-6 col-md-4">
                         <div class="form-group slider">
                             <label id="score-label">Score</label>
                             <div id="score-slider" data-name="score"></div>
