Bigger app icons

--- a/cmd/webserver/assets/sass/_tables.scss
+++ b/cmd/webserver/assets/sass/_tables.scss
@@ -138,6 +138,11 @@ table.table {
             width: auto;
         }
 
+        img.tall {
+            width: 54px;
+            height: 54px;
+        }
+
         div.icon-name {
             > div.name {
                 padding: .75rem 0;
