Start random page

--- a/cmd/webserver/assets/sass/index.scss
+++ b/cmd/webserver/assets/sass/index.scss
@@ -8,6 +8,7 @@
 @import "third-party/bootstrap4c-chosen";
 //@import "third-party/pace";
 @import "admin";
+@import "apps_random";
 @import "api";
 @import "app";
 @import "apps";
