--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -148,6 +148,7 @@
                             {{/*<a class="dropdown-item" href="/apps/trending">Trending</a>*/}}
                             <a class="dropdown-item" href="/achievements">Most Achievements</a>
                             <a class="dropdown-item" href="/wishlists">Most Wishlists</a>
+                            <a class="dropdown-item" href="/apps/random">Random Game</a>
 
                             <div class="dropdown-divider"></div>
 
