--- a/cmd/webserver/templates/apps_random.gohtml
+++ b/cmd/webserver/templates/apps_random.gohtml
@@ -11,7 +11,7 @@
         {{ template "_flashes" . }}
 
         <div class="card mb-3">
-            <div class="card-body">
+            <div class="card-body" id="search-card">
 
                 <div class="row">
                     <div class="col-sm-6 col-md-4">
