--- a/cmd/webserver/templates/apps_random.gohtml
+++ b/cmd/webserver/templates/apps_random.gohtml
@@ -5,7 +5,6 @@
 
         <div class="jumbotron">
             <h1 class="mb-4"><i class="fas fa-gamepad"></i> Find a game to play</h1>
-            <div class="btn btn-success cursor-pointer" id="find-another">Find Another</div>
         </div>
 
         {{ template "_flashes" . }}
@@ -81,11 +80,12 @@
         </div>
 
         {{ range $key, $value := .Apps }}
-            <div class="card">
-                <h5 class="card-header">
+            <div class="card" id="results-card">
+                <h3 class="card-header">
                     {{ .GetName }}
-                    <a class="btn btn-success btn-sm float-right" href="{{ .GetPath }}">More Info</a>
-                </h5>
+                    <a class="btn btn-success btn-sm float-right ml-1" href="{{ .GetPath }}">More Info</a>
+                    <div class="btn btn-danger btn-sm float-right cursor-pointer ml-1" id="find-another">Find Another</div>
+                </h3>
                 <div class="card-body">
 
                     <div class="row">
