Add price to random page

--- a/cmd/webserver/templates/apps_random.gohtml
+++ b/cmd/webserver/templates/apps_random.gohtml
@@ -125,6 +125,9 @@
                                 </div>
                             {{ end }}
 
+                            <h5 class="mt-2 mb-0">Price:</h5>
+                            {{ $.Price.GetFinal }}
+
                             <h5 class="mt-2 mb-0">Achievements:</h5>
                             {{ comma .AchievementsCount }}
 
