--- a/cmd/webserver/assets/sass/_apps_random.scss
+++ b/cmd/webserver/assets/sass/_apps_random.scss
@@ -7,7 +7,8 @@
     #media {
         video, img {
             width: 100%;
-            @extend .mb-1;
+            margin-bottom: 2px;
+            float: left; // To remove white space
         }
     }
 }
