--- a/cmd/webserver/templates/apps_random.gohtml
+++ b/cmd/webserver/templates/apps_random.gohtml
@@ -5,6 +5,7 @@
 
         <div class="jumbotron">
             <h1 class="mb-4"><i class="fas fa-gamepad"></i> Find a game to play</h1>
+            <p class="lead">Under Construction!</p>
         </div>
 
         {{ template "_flashes" . }}
