--- a/cmd/webserver/templates/apps_random.gohtml
+++ b/cmd/webserver/templates/apps_random.gohtml
@@ -54,8 +54,8 @@
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="form-group">
-                            <label for="popular">Review Score</label>
-                            <select class="form-control form-control-chosen" id="popular" name="popular">
+                            <label for="score">Review Score</label>
+                            <select class="form-control form-control-chosen" id="score" name="score">
                                 <option value="">All Games</option>
                                 <option value="90">90% and above</option>
                                 <option value="80">80% and above</option>
