--- a/cmd/webserver/templates/apps_random.gohtml
+++ b/cmd/webserver/templates/apps_random.gohtml
@@ -10,8 +10,8 @@
 
         {{ template "_flashes" . }}
 
-        <div class="card mb-3">
-            <div class="card-body" id="search-card">
+        <div class="card mb-3" id="search-card">
+            <div class="card-body">
 
                 <div class="row">
                     <div class="col-sm-6 col-md-4">
