--- a/cmd/webserver/templates/apps_random.gohtml
+++ b/cmd/webserver/templates/apps_random.gohtml
@@ -30,16 +30,16 @@
                             <label for="achievements">Achievements</label>
                             <select class="form-control form-control-chosen" id="achievements" name="achievements">
                                 <option value="">All Games</option>
-                                <option value="1">Games with achievements only</option>
+                                <option value="1">Achievements Only</option>
                             </select>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="form-group">
-                            <label for="played">Played</label>
+                            <label for="played">Played <small>(Must log in)</small></label>
                             <select class="form-control form-control-chosen" id="played" name="played">
                                 <option value="">All Games</option>
-                                <option value="1">Games you have played before</option>
+                                <option value="1">Played Games</option>
                             </select>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                             <label for="popular">Popular</label>
                             <select class="form-control form-control-chosen" id="popular" name="popular">
                                 <option value="">All Games</option>
-                                <option value="1">Popular games only</option>
+                                <option value="1">Popular Games</option>
                             </select>
                         </div>
                     </div>
