--- a/cmd/webserver/templates/apps_random.gohtml
+++ b/cmd/webserver/templates/apps_random.gohtml
@@ -1,11 +1,13 @@
 {{define "apps_random"}}
     {{ template "_header" . }}
 
-    <div class="container" id="apps-random-page" data-bg="{{ (index .Apps 0).ID }}">
+    <div class="container" id="apps-random-page" data-bg="{{ if gt (len .Apps) 0 }}{{ (index .Apps 0).ID }}{{ end }}">
 
         <div class="jumbotron">
-            <h1 class="mb-4"><i class="fas fa-gamepad"></i> Find a game to play</h1>
-            <p class="lead">Under Construction!</p>
+            <h1><i class="fas fa-gamepad"></i> Find a game to play</h1>
+            {{ if gt (len .Apps) 0 }}
+                <p class="lead mt-4">Here's a random game from the {{ comma64 .AppCount }} games that match your filter.</p>
+            {{ end }}
         </div>
 
         {{ template "_flashes" . }}
@@ -36,10 +38,11 @@
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="form-group">
-                            <label for="played">Played <small>(Must log in)</small></label>
+                            <label for="played">Owned/Played <small>(Must log in)</small></label>
                             <select class="form-control form-control-chosen" id="played" name="played">
                                 <option value="">All Games</option>
-                                <option value="1">Played Games</option>
+                                <option value="owned">Owned Games</option>
+                                <option value="played">Played Games</option>
                             </select>
                         </div>
                     </div>
@@ -82,64 +85,70 @@
 
         </div>
 
-        {{ range $key, $value := .Apps }}
-            <div class="card" id="results-card">
-                <h3 class="card-header">
-                    {{ .GetName }}
-                    <a class="btn btn-success btn-sm float-right ml-1" href="{{ .GetInstallLink }}"><i class="fas fa-sign-in-alt"></i> Install</a>
-                    <a class="btn btn-warning btn-sm float-right ml-1" href="{{ .GetPath }}"><i class="fas fa-info"></i> More Info</a>
-                    <div class="btn btn-danger btn-sm float-right cursor-pointer ml-1" id="find-another"><i class="fas fa-retweet"></i> Find Another</div>
-                </h3>
-                <div class="card-body">
+        {{ if gt (len .Apps) 0 }}
+            {{ range $key, $value := .Apps }}
+                <div class="card" id="results-card">
+                    <h3 class="card-header">
+                        {{ .GetName }}
+                        <a class="btn btn-success btn-sm float-right ml-1" href="{{ .GetInstallLink }}"><i class="fas fa-sign-in-alt"></i> Install</a>
+                        <a class="btn btn-warning btn-sm float-right ml-1" href="{{ .GetPath }}"><i class="fas fa-info"></i> More Info</a>
+                        <div class="btn btn-danger btn-sm float-right cursor-pointer ml-1" id="find-another"><i class="fas fa-retweet"></i> Find Another</div>
+                    </h3>
+                    <div class="card-body">
 
-                    <div class="row">
-                        <div class="col-12 col-lg-6 order-2 order-lg-1" id="media">
+                        <div class="row">
+                            <div class="col-12 col-lg-6 order-2 order-lg-1" id="media">
 
-                            {{ if ne .GetMicroTrailer "" }}
-                                <video controls autoplay loop muted preload="metadata">
-                                    <source src="{{ https .GetMicroTrailer }}" type="video/webm">
-                                    Sorry, your browser doesn't support embedded videos.
-                                </video>
-                            {{ end }}
+                                {{ if ne .GetMicroTrailer "" }}
+                                    <video controls autoplay loop muted preload="metadata">
+                                        <source src="{{ https .GetMicroTrailer }}" type="video/webm">
+                                        Sorry, your browser doesn't support embedded videos.
+                                    </video>
+                                {{ end }}
 
-                            {{ range $key, $value := .Movies }}
-                                <video controls preload="metadata">
-                                    <source src="{{ https .PathFull }}" type="video/webm">
-                                    Sorry, your browser doesn't support embedded videos.
-                                </video>
-                            {{ end }}
+                                {{ range $key, $value := .Movies }}
+                                    <video controls preload="metadata">
+                                        <source src="{{ https .PathFull }}" type="video/webm">
+                                        Sorry, your browser doesn't support embedded videos.
+                                    </video>
+                                {{ end }}
 
-                            {{ range $key, $value := .Screenshots }}
-                                <img src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080"%3E%3C/svg%3E' data-lazy="{{ .PathFull }}" alt="Media {{ $key }}">
-                            {{ end }}
+                                {{ range $key, $value := .Screenshots }}
+                                    <img src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080"%3E%3C/svg%3E' data-lazy="{{ .PathFull }}" alt="Media {{ $key }}">
+                                {{ end }}
 
+                            </div>
+                            <div class="col-12 col-lg-6 order-1 order-lg-2 mb-4">
+
+                                <h5>Tags:</h5>
+                                {{ range $.AppTags }}
+                                    <div class="badge badge-pill badge-success">{{ .Name }}</div>
+                                {{ end }}
+
+                                <h5 class="mt-2 mb-0">Rating:</h5>
+                                <div>{{ comma .ReviewsCount }} reviews</div>
+                                {{ if gt .ReviewsCount 0 }}
+                                    <div class="progress">
+                                        <div class="progress-bar bg-success" role="progressbar" style="width: {{.ReviewsScore}}%" aria-valuenow="{{.ReviewsScore}}" aria-valuemin="0" aria-valuemax="100">{{.GetReviewScore}} review score</div>
+                                    </div>
+                                {{ end }}
+
+                                <h5 class="mt-2 mb-0">Price:</h5>
+                                {{ $.Price.GetFinal }}
+
+                                <h5 class="mt-2 mb-0">Achievements:</h5>
+                                {{ comma .AchievementsCount }}
+
+                            </div>
                         </div>
-                        <div class="col-12 col-lg-6 order-1 order-lg-2 mb-4">
 
-                            <h5>Tags:</h5>
-                            {{ range $.AppTags }}
-                                <div class="badge badge-pill badge-success">{{ .Name }}</div>
-                            {{ end }}
-
-                            <h5 class="mt-2 mb-0">Rating:</h5>
-                            <div>{{ comma .ReviewsCount }} reviews</div>
-                            {{ if gt .ReviewsCount 0 }}
-                                <div class="progress">
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: {{.ReviewsScore}}%" aria-valuenow="{{.ReviewsScore}}" aria-valuemin="0" aria-valuemax="100">{{.GetReviewScore}} review score</div>
-                                </div>
-                            {{ end }}
-
-                            <h5 class="mt-2 mb-0">Price:</h5>
-                            {{ $.Price.GetFinal }}
-
-                            <h5 class="mt-2 mb-0">Achievements:</h5>
-                            {{ comma .AchievementsCount }}
-
-                        </div>
                     </div>
 
                 </div>
-
+            {{ end }}
+        {{ else }}
+            <div class="card">
+                <div class="card-body">No apps match your search filters</div>
             </div>
         {{ end }}
 
