--- a/cmd/webserver/templates/apps_random.gohtml
+++ b/cmd/webserver/templates/apps_random.gohtml
@@ -16,7 +16,7 @@
             <div class="card-body">
 
                 <div class="row">
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-4 col-lg-3">
                         <div class="form-group">
                             <label for="os">OS</label>
                             <select class="form-control form-control-chosen" id="os" name="os">
@@ -27,7 +27,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-4 col-lg-3">
                         <div class="form-group">
                             <label for="tag">Tag</label>
                             <select class="form-control form-control-chosen" id="tag" name="tag">
@@ -38,7 +38,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-4 col-lg-3">
                         <div class="form-group">
                             <label for="achievements">Achievements</label>
                             <select class="form-control form-control-chosen" id="achievements" name="achievements">
@@ -47,7 +47,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-4 col-lg-3">
                         <div class="form-group">
                             <label for="played">Owned/Played <small>(Must log in)</small></label>
                             <select class="form-control form-control-chosen" id="played" name="played">
@@ -57,7 +57,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-4 col-lg-3">
                         <div class="form-group">
                             <label for="popular">Popular</label>
                             <select class="form-control form-control-chosen" id="popular" name="popular">
@@ -66,7 +66,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-4 col-lg-3">
                         <div class="form-group">
                             <label for="score">Review Score</label>
                             <select class="form-control form-control-chosen" id="score" name="score">
@@ -79,7 +79,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-4 col-lg-3">
                         <div class="form-group">
                             <label for="popular">Release Year</label>
                             <select class="form-control form-control-chosen" id="popular" name="year">
