--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -448,8 +448,6 @@
                             </div>
 
                             {{/* Recent Games */}}
-                            {{/*                        {{ if gt .Player.FriendsCount 0}}*/}}
-
                             <div class="table-responsive mb-4">
                                 <table class="table table-hover table-striped table-counts mb-4" data-path="/players/{{ .Player.ID }}/recent.json" id="recent-games">
                                     <thead class="thead-light">
@@ -464,9 +462,14 @@
                                 </table>
                             </div>
 
-                            {{/*                        {{end}}*/}}
-
                             {{/* Games List */}}
+                            <div class="form-row">
+                                <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
+                                    <label for="player-games-search" class="d-none"></label>
+                                    <input type="text" id="player-games-search" name="player-games-search" class="form-control" placeholder="Game Search">
+                                </div>
+                            </div>
+
                             <div class="table-responsive">
                                 <table class="table table-hover table-striped table-counts mb-0" data-path="/players/{{ .Player.ID }}/games.json" id="all-games">
                                     <thead class="thead-light">
