Add unplayed games option

--- a/cmd/webserver/templates/apps_random.gohtml
+++ b/cmd/webserver/templates/apps_random.gohtml
@@ -54,6 +54,7 @@
                                 <option value="">All Games</option>
                                 <option value="owned">Owned Games</option>
                                 <option value="played">Played Games</option>
+                                <option value="notplayed">Unlayed Games</option>
                             </select>
                         </div>
                     </div>
