Fix labels for sr

--- a/cmd/webserver/templates/genres.gohtml
+++ b/cmd/webserver/templates/genres.gohtml
@@ -13,7 +13,7 @@
                 <div class="col-sm-12 col-lg-6">
 
                     <div class="input-group input-group-lg mt-1">
-                        <label for="search" class="d-none"></label>
+                        <label for="search" class="sr-only sr-only-focusable">Search for a Genre</label>
                         <input class="form-control" id="search" type="search" name="search" placeholder="Search for a Genre" required="required" autocomplete="off" autofocus>
                     </div>
 
