--- a/cmd/webserver/templates/product_keys.gohtml
+++ b/cmd/webserver/templates/product_keys.gohtml
@@ -12,7 +12,7 @@
                 <div class="col-sm-12 col-lg-6">
 
                     <div class="input-group input-group-lg mt-1 mb-2">
-                        <label for="table-search" class="d-none"></label>
+                        <label for="table-search" class="sr-only sr-only-focusable">Search</label>
                         <input class="form-control" type="search" placeholder="Search for a Key" id="table-search" name="table-search" autofocus>
                         <div class="input-group-append">
                             <input type="submit" value="Search" class="input-group-text">
