--- a/cmd/webserver/templates/api.gohtml
+++ b/cmd/webserver/templates/api.gohtml
@@ -79,7 +79,7 @@
                                             {{ range $key, $value := .Parameters }}
                                                 <tr>
                                                     <td>
-                                                        <label for="{{ .Value.Name }}" class="d-none">Search</label>
+                                                        <label for="{{ .Value.Name }}" class="sr-only sr-only-focusable">API Key</label>
                                                         <!--suppress HtmlFormInputWithoutLabel -->
                                                         <input class="form-control form-control-sm api-field"
                                                                {{ if .Value.Required }}required="required"{{end}}
