--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -73,7 +73,7 @@
                                 <form action="/players/add" method="post">
 
                                     <div class="input-group">
-                                        <label for="search" class="d-none"></label>
+                                        <label for="search" class="sr-only sr-only-focusable">Steam URL / ID</label>
                                         <input type="search" class="form-control" id="search" name="search" placeholder="Steam URL / ID" required>
 
                                         <div class="input-group-append">
