--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -465,7 +465,7 @@
                             {{/* Games List */}}
                             <div class="form-row">
                                 <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
-                                    <label for="player-games-search" class="d-none"></label>
+                                    <label for="player-games-search" class="sr-only sr-only-focusable">Game Search</label>
                                     <input type="text" id="player-games-search" name="player-games-search" class="form-control" placeholder="Game Search">
                                 </div>
                             </div>
