--- a/cmd/webserver/templates/apps_random.gohtml
+++ b/cmd/webserver/templates/apps_random.gohtml
@@ -100,12 +100,7 @@
         {{ if gt (len .Apps) 0 }}
             {{ range $key, $value := .Apps }}
                 <div class="card" id="results-card">
-                    <h3 class="card-header">
-                        {{ .GetName }}
-                        <a class="btn btn-success btn-sm float-right ml-1" href="{{ .GetInstallLink }}"><i class="fas fa-sign-in-alt"></i> Install</a>
-                        <a class="btn btn-warning btn-sm float-right ml-1" href="{{ .GetPath }}"><i class="fas fa-info"></i> More Info</a>
-                        <div class="btn btn-danger btn-sm float-right cursor-pointer ml-1" id="find-another"><i class="fas fa-retweet"></i> Find Another</div>
-                    </h3>
+                    <h3 class="card-header">{{ .GetName }}</h3>
                     <div class="card-body">
 
                         <div class="row">
@@ -132,7 +127,13 @@
                             </div>
                             <div class="col-12 col-lg-6 order-1 order-lg-2 mb-4">
 
-                                <h5 class="mb-0">Tags:</h5>
+                                <div>
+                                    <a class="btn btn-success mr-1" href="{{ .GetInstallLink }}"><i class="fas fa-sign-in-alt"></i> Install</a>
+                                    <a class="btn btn-warning mr-1" href="{{ .GetPath }}"><i class="fas fa-info"></i> More Info</a>
+                                    <div class="btn btn-danger cursor-pointer mr-1" id="find-another"><i class="fas fa-retweet"></i> Find Another</div>
+                                </div>
+
+                                <h5 class="mt-4 mb-0">Tags:</h5>
                                 {{ if gt (len $.AppTags) 0 }}
                                     {{ range $.AppTags }}
                                         <a class="badge badge-pill badge-success" href="{{ .GetPath }}" target="_blank">{{ .Name }}</a>
